--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "type": "module",
   "name": "project-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node generate-rss.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,6 +25,7 @@
     "next-mdx-remote": "4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-feather": "2.0.10"
+    "react-feather": "2.0.10",
+    "rss": "^1.2.2"
   }
 }
